--- a/mian.css
+++ b/mian.css
@@ -111,3 +111,13 @@ footer a {
       width: 90%;
    }
 }
+
+.good {
+   background-color: rgba(117, 248, 112, 0.735);
+   padding: 10px;
+}
+
+.bad {
+   background-color: rgba(253, 58, 58, 0.735);
+   padding: 10px;
+}
